# sabers_test_project

./: .gitignore  Dockerfile  README.en-US.md  README.ru-RU.md  docker-compose.yml  docker-compose_prod.yml  makefile  pyproject.toml
nginx/: nginx.conf
src/apps/articles/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
src/apps/articles/migrations/: 0001_initial.py  0002_article_short_description.py
src/core/: settings.py  urls.py
src/locale/ru/LC_MESSAGES/: django.mo  django.po
src/static/: index.css
src/templates/: index.html  langswitch.html
src/templates/articles/: article_detail.html
