[tool.poetry]
name = "sabers test project"
version = "0.1.0"
description = "this is just testing project from sabers company"
authors = ["Bakdolot"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2"
Pillow = "^9.1.1"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
